--- a/MiniShopApp/Pages/Orders/OrderViewToday.razor
+++ b/MiniShopApp/Pages/Orders/OrderViewToday.razor
@@ -1,6 +1,8 @@
-﻿@using MiniShopApp.Models.Orders
+﻿@using DocumentFormat.OpenXml.Drawing
+@using MiniShopApp.Models.Orders
 @page "/orders/views/today"
 @layout MainLayout
+@inject PdfService pdfService
 <PageTitle>Order Today</PageTitle>
 
 <MudTabs Outlined="true" Class="sticky-tabs-top">
@@ -31,7 +33,7 @@
                                             Dense=true
                                            
                                                      AriaLabel="Open menu">
-                                                <MudMenuItem Label="Generate Receipt" />
+                                                <MudMenuItem Label="Generate Receipt" OnClick="@(() => GenerateReceiptAsync(new[]{order}))" />
                                                 <MudMenuItem Label="Modify Order" />
                                                 <MudMenuItem Label="Delete Order" />
                                             </MudMenu>
@@ -71,105 +73,121 @@
                 </MudGrid>
             </MudTabPanel>
             <MudTabPanel Text="Grid" Icon="@Icons.Material.Filled.ListAlt" >
-                <MudTable Items="@orders" Hover="true" Dense="true" >
+                <MudCollapse Expanded="_expandedEdit">
+                    
+                    <MudStack Row Justify="Justify.FlexStart" AlignItems=AlignItems.Center Class="py-2 bg-info-subtle" Spacing="3" >
+
+                        <MudText Typo="Typo.subtitle2" Class="text-center px-2">@selectedOrders.Count selected</MudText>
+                        <div style="border-left:2px solid #ccc; height:40px; margin:0 10px;"></div>
+                        <MudMenu Label="Edit" Variant="Variant.Text" EndIcon="@Icons.Material.Filled.KeyboardArrowDown">
+                            <MudMenuItem Label="Generate Receipt" OnClick="@(() => GenerateReceiptAsync(selectedOrders))" />
+                            <MudMenuItem Label="Modify Order" />
+                            <MudMenuItem Label="Delete Order" />
+                        </MudMenu>
+                    </MudStack>
+                </MudCollapse>
+                <MudTable ServerData="ServerReload" 
+                    FixedHeader="@fixed_header" 
+                    FixedFooter="@fixed_footer"
+                          Height="@(fixed_header || fixed_footer ? "500px" : "")"
+                          MultiSelection="true"
+                         
+                    T="ViewTbOrders" 
+                    Dense="true" Hover="true" @ref="table" Loading="isLoading" OnRowClick="OnExpandCollapseClick"
+                    SelectOnRowClick=false
+                    SelectedItemsChanged="@(items => MultiSelect(items))">
                     <HeaderContent>
-                        <MudTh>Order #</MudTh>
-                        <MudTh>Customer</MudTh>
+                        <MudTh>
+                            <MudTableSortLabel SortLabel="Id" T="ViewTbOrders">
+                                Date
+                            </MudTableSortLabel>
+                        </MudTh>
+                        <MudTh>
+                            <MudTableSortLabel SortLabel="Id" T="ViewTbOrders">
+                                Customer Id
+                            </MudTableSortLabel>
+                        </MudTh>
+                        <MudTh>
+                            <MudTableSortLabel SortLabel="Id" T="ViewTbOrders">
+                                Customer
+                            </MudTableSortLabel>
+                        </MudTh>
                         <MudTh>Table</MudTh>
-                        <MudTh>Items</MudTh>
-                        <MudTh>Total</MudTh>
-                        <MudTh>Date</MudTh>
-                        <MudTh>Action</MudTh>
+                        <MudTh>Item</MudTh>
+                        <MudTh>Price</MudTh>
+                        <MudTh>Discount</MudTh>
+                        <MudTh>
+                            <MudTableSortLabel SortLabel="Id" T="ViewTbOrders">
+                                Total
+                            </MudTableSortLabel>
+                        </MudTh>
+                        
                     </HeaderContent>
                     <RowTemplate>
-                        <MudTd DataLabel="Order #">@context.Id</MudTd>
-                        <MudTd DataLabel="Customer">@context.FirstName @context.LastName</MudTd>
-                        <MudTd DataLabel="Table">@context.TableNumber</MudTd>
-                        <MudTd DataLabel="Items">@context.ItemCount</MudTd>
-                        <MudTd DataLabel="Total">@context.TotalPrice?.ToString("c2")</MudTd>
-                        <MudTd DataLabel="Date">@context.CreatedDT?.ToString("g")</MudTd>
-                        <MudTd>
-                            <MudMenu Icon="@Icons.Material.Filled.MoreVert"
-                            Dense=true
-                                     AnchorOrigin="Origin.BottomLeft"
-                                     TransformOrigin="Origin.TopRight"
-                                     AriaLabel="Open menu">
-                                <MudMenuItem Label="Generate Receipt" />
-                                <MudMenuItem Label="Modify Order" />
-                                <MudMenuItem Label="Delete Order" />
-                            </MudMenu>
-                        </MudTd>
+                        <MudTd @key="context.Id" DataLabel="Order ID"><MudIcon Icon="@Icons.Material.Filled.ArrowDropDown" /> @context.CreatedDT?.ToString("dd/MMM/yy")</MudTd>
+                        <MudTd DataLabel="CustomerId">@context.CustomerId</MudTd>
+                        <MudTd DataLabel="FirstName">@context.FirstName</MudTd>
+                        <MudTd DataLabel="TableNumber">@context.TableNumber</MudTd>
+                        <MudTd DataLabel="ItemCount">@context.ItemCount</MudTd>
+                        <MudTd DataLabel="SubPrice">@context.SubPrice?.ToString("c2")</MudTd>
+                        <MudTd DataLabel="DiscountPrice">@context.DiscountPrice?.ToString("P0")</MudTd>
+                        <MudTd DataLabel="TotalPrice">@context.TotalPrice?.ToString("c2")</MudTd>
+          
                     </RowTemplate>
+                           
+                      
+                    <ChildRowContent>
+
+                        <MudTd ColSpan="9" Class="bg-body-tertiary" hidden="@(_expandedOrderId != context.Id)" DataLabel="Order details">
+                            <MudCollapse Expanded="_expandedOrderId == context.Id" Tag="@context.Id">
+                                <MudTable Items="@context.TbOrderDetails" Dense=true Context="c">
+                                    <HeaderContent>
+                                        <MudTh>Id</MudTh>
+                                        <MudTh>Item</MudTh>
+                                        <MudTh>Quantity</MudTh>
+                                        <MudTh>Price</MudTh>
+                                        <MudTh>Total Price</MudTh>
+                                    </HeaderContent>
+                                    <RowTemplate>
+                                        <MudTd> @c.Id</MudTd>
+                                        <MudTd>@c.ItemName</MudTd>
+                                        <MudTd>@c.Quantity</MudTd>
+                                        <MudTd>@c.Price?.ToString("c2")</MudTd>
+                                        <MudTd>@c.TotalPrice?.ToString("c2")</MudTd>
+                                    </RowTemplate>
+                                </MudTable>
+                                
+                            </MudCollapse>
+                        </MudTd>
+
+                    </ChildRowContent>
+                    
+                    <NoRecordsContent>
+                        <MudText>No matching records found</MudText>
+                    </NoRecordsContent>
+                    <LoadingContent>
+                        <MudText>Loading...</MudText>
+                    </LoadingContent>
+                    <FooterContent>
+                        <MudTd colspan="6"></MudTd>
+                        <MudTd>Total</MudTd>
+                        <MudTd><b>@orders.Sum(x => x.TotalPrice)?.ToString("c2")</b></MudTd>
+                    </FooterContent>
+                    <PagerContent>
+                        <MudTablePager />
+                    </PagerContent>
                 </MudTable>
+                <MudStack Row=true StretchItems="StretchItems.None">
+                    <MudSwitch @bind-Value="fixed_header" Color="Color.Primary">Fixed Header</MudSwitch>
+                    <MudSwitch @bind-Value="fixed_footer" Color="Color.Primary">Fixed Footer</MudSwitch>
+                </MudStack>
             </MudTabPanel>
-            
+           
         </MudTabs>
+       
     </MudTabPanel>
     <MudTabPanel Text="Yesterday" Icon="@Icons.Material.Filled.CalendarViewWeek" OnClick="GetOrderYesterday">
         <MudTabs Outlined="false">
-            @* <MudTabPanel Text="Card" Icon="@Icons.Material.Filled.GridView">
-                <MudStack>
-                    <MudTextField T="string" @bind-Text="filter" Placeholder="Search" Variant=Variant.Text Adornment="Adornment.End"
-                                  AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="my-2"></MudTextField>
-                </MudStack>
-                <MudGrid>
-                    @if (orders is not null && orders.Any())
-                    {
-                        @foreach (var order in orders)
-                        {
-                            <MudItem>
-                                <MudCard Class="mb-2" Elevation="3" Style="width:250px;max-width:350px">
-                                    <MudCardHeader>
-                                        <CardHeaderContent>
-                                            <MudText Typo="Typo.subtitle1">#@order.Id | @order.FirstName @order.LastName</MudText>
-
-                                        </CardHeaderContent>
-
-                                        <CardHeaderActions>
-                                            <MudMenu Icon="@Icons.Material.Filled.MoreVert"
-                                                     AnchorOrigin="Origin.BottomLeft"
-                                                     TransformOrigin="Origin.TopRight"
-                                                     Dense=true
-                                                     AriaLabel="Open menu">
-                                                <MudMenuItem Label="Generate Receipt" />
-                                                <MudMenuItem Label="Modify Order" />
-                                                <MudMenuItem Label="Delete Order" />
-                                            </MudMenu>
-                                        </CardHeaderActions>
-                                    </MudCardHeader>
-
-                                    <MudCardContent>
-                                        <MudText>Table: <b>@order.TableNumber</b></MudText>
-                                        <MudText>Items: <b>@order.ItemCount</b></MudText>
-                                        <MudText>Total: <b>@order.TotalPrice?.ToString("c2")</b></MudText>
-                                        <MudDivider Class="my-2" />
-                                        <MudList T="MiniShopApp.Models.Orders.ViewTbOrderDetails" Dense="true">
-                                            @if (order.TbOrderDetails != null)
-                                            {
-                                                @foreach (var detail in order.TbOrderDetails)
-                                                {
-                                                    <MudListItem T="MiniShopApp.Models.Orders.ViewTbOrderDetails" Value="@detail">
-                                                        <MudText>@detail.ItemName x @detail.Quantity = @detail.TotalPrice?.ToString("c2")</MudText>
-                                                    </MudListItem>
-                                                }
-                                            }
-                                        </MudList>
-                                    </MudCardContent>
-                                    <MudCardActions>
-                                        <MudText Typo="Typo.caption">Date: @order.CreatedDT?.ToString("dd/MMM/yy hh:mm tt")</MudText>
-                                    </MudCardActions>
-                                </MudCard>
-                            </MudItem>
-                        }
-                    }
-                    else
-                    {
-                        <MudItem xs="12">
-                            <MudText>No orders found for today.</MudText>
-                        </MudItem>
-                    }
-                </MudGrid>
-            </MudTabPanel> *@
             <MudTabPanel Text="Grid" Icon="@Icons.Material.Filled.ListAlt">
                 <MudTable Items="@orders" Hover="true" Dense="true">
                     <HeaderContent>
@@ -200,15 +218,20 @@
                             </MudMenu>
                         </MudTd>
                     </RowTemplate>
+                    <FooterContent>
+                        <MudTd colspan="4"></MudTd>
+                        <MudTd><b>@orders.Sum(x => x.TotalPrice)?.ToString("c2")</b></MudTd>
+                        <MudTd colspan="2">Total</MudTd>
+                    </FooterContent>
                 </MudTable>
             </MudTabPanel>
 
         </MudTabs>
     </MudTabPanel>
-    <MudTabPanel Text="Week" Icon="@Icons.Material.Filled.ViewWeek" >
-
+    <MudTabPanel Text="More" Icon="@Icons.Material.Filled.ViewList" >
+        <OrderViewPage/>
     </MudTabPanel>
-    <MudTabPanel Text="Months" Icon="@Icons.Material.Filled.CalendarMonth" OnClick="GetOrderMonth">
+   @*  <MudTabPanel Text="Months" Icon="@Icons.Material.Filled.CalendarMonth" OnClick="GetOrderMonth">
         <MudStack Row=true Spacing="2" StretchItems="StretchItems.Start" Class="my-2">
             <MudSelect T="int" @bind-Value="selectedMonth" Label="Month" Style="width: 120px;">
                 @foreach (var m in months)
@@ -264,9 +287,100 @@
                 Total Price: @orders.Sum(x => x.TotalPrice)?.ToString("c2")
             </MudButton>
         </MudPaper>
-    </MudTabPanel>
+    </MudTabPanel> *@
 </MudTabs>
 
+
+@code{
+    bool fixed_header = true;
+    bool fixed_footer = true; 
+    bool _expandedEdit = false;
+    long? _expandedOrderId = null;
+    bool isLoading = false;
+    private void OnExpandCollapseClick(TableRowClickEventArgs<ViewTbOrders> row)
+    {
+        if (_expandedOrderId == row.Item.Id)
+            _expandedOrderId = null; // Collapse if already expanded
+        else
+            _expandedOrderId = row.Item.Id; // Expand this row
+    }
+    private int totalItems;
+    private string searchString = null;
+    private IEnumerable<ViewTbOrders> pagedData;
+    private MudTable<ViewTbOrders> table;
+    private List<ViewTbOrders> selectedOrders = new();
+
+    void MultiSelect(IEnumerable<ViewTbOrders> items)
+    {
+        selectedOrders = items.ToList();
+        if(selectedOrders.Any())
+            _expandedEdit = true;
+        else
+            _expandedEdit = false;
+
+        StateHasChanged();
+    }
+    private async Task<TableData<ViewTbOrders>> ServerReload(TableState state, CancellationToken token)
+    {
+        IEnumerable<ViewTbOrders> data = orders;
+        await Task.Delay(300, token);
+        data = data.Where(element =>
+        {
+            bool matches = true;
+            if (!string.IsNullOrWhiteSpace(searchString))
+            {
+                matches = element.CustomerId.ToString().Contains(searchString, StringComparison.OrdinalIgnoreCase)
+                    || (element.TableNumber != null && element.TableNumber.Contains(searchString, StringComparison.OrdinalIgnoreCase));
+            }
+            // if (matches && startDate.HasValue)
+            // {
+            //     matches = element.CreatedDT.HasValue && element.CreatedDT.Value.Date >= startDate.Value.Date;
+            // }
+            // if (matches && endDate.HasValue)
+            // {
+            //     matches = element.CreatedDT.HasValue && element.CreatedDT.Value.Date <= endDate.Value.Date;
+            // }
+            // if (matches && selectedMonth.HasValue)
+            // {
+            //     matches = element.CreatedDT.HasValue && element.CreatedDT.Value.Month == selectedMonth.Value;
+            // }
+            // if (matches && selectedYear.HasValue)
+            // {
+            //     matches = element.CreatedDT.HasValue && element.CreatedDT.Value.Year == selectedYear.Value;
+            // }
+            return matches;
+        }).ToArray();
+        totalItems = data.Count();
+        switch (state.SortLabel)
+        {
+            case "Id":
+                data = data.OrderByDirection(state.SortDirection, o => o.Id);
+                break;
+            case "CustomerId":
+                data = data.OrderByDirection(state.SortDirection, o => o.CustomerId);
+                break;
+            case "TableNumber":
+                data = data.OrderByDirection(state.SortDirection, o => o.TableNumber);
+                break;
+            case "FirstName":
+                data = data.OrderByDirection(state.SortDirection, o => o.FirstName);
+                break;
+            case "TotalPrice":
+                data = data.OrderByDirection(state.SortDirection, o => o.TotalPrice);
+                break;
+
+        }
+
+        pagedData = data.Skip(state.Page * state.PageSize).Take(state.PageSize).ToArray();
+        return new TableData<ViewTbOrders>() { TotalItems = totalItems, Items = pagedData.OrderByDescending(x => x.Id) };
+    }
+
+    private void OnSearch(string text)
+    {
+        searchString = text;
+        table.ReloadServerData();
+    }
+}
 <style>
 .sticky-footer-total {
     position: sticky;
